<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="defItem" Id="{40371373-15e9-464c-9148-8d025db7018a}">
    <Declaration><![CDATA[TYPE defItem :
STRUCT
	CurrerntIndex AT%I* : BYTE; //curent working index
	Counter AT%I* : BYTE;  //successful picked item amount	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>